--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,8 @@
+@import 'variables';
+@import 'library';
+@import 'libraryCourse','arrow','schedule','scheduleCourse','progressTracker';
+
+
 .home {
     height: 100vh;
     width: 100vw;
@@ -7,10 +12,17 @@
     grid-template-rows: 1fr;
 }
 
-.library {
-    grid-column: library-s/library-e;
-}
-
 .schedule {
     grid-column: schedule-s/schedule-e;
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
+.gradient {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(120deg, $color-purple 0%, $color-light-blue 100%);
+    z-index: -10;
 }
